@@ -1,3 +1,7 @@
+2012-03-23  Mark Wielaard  <mjw@redhat.com>
+
+	* test/tapset/jstaptest.pl: Add jstack tests.
+
 2012-03-23  Jon VanAlten  <jon.vanalten@redhat.com>
 
 	* Makefile.am:
